css/admin-theme.css
:root {
  --peacock-green: #376c74;
  --mediterranean-blue: #187e9b;
  --robin-egg: #d9f1f3;
  --wool: #fbfbf6;
  --light-gray: #d4d4d4;
  --darkest-gray: #1f1f1f;
  --dark-theme-gray-rgb: 78, 89, 89;
  --dark-theme-gray: #4E5959;
  --dark-theme-gray-hover: #353d3d;
  --dark-primary-link: var(--wool);
  --dark-primary-link-hover: #ffffff;
  --dark-gin-icon-color: var(--wool);
  --gin-color-text-light: var(--wool);

  --gin-font: Mallory, sans-serif;
  --gin-font-size-h1: 1.75rem;
  --gin-font-size-h2: 1.5rem;
  --gin-font-size-h3: 1.25rem;
  --gin-border-m: 0.313rem;
  --gin-bg-app: #fcfefe;
  --gin-bg-app-rgb: rgb(252, 254, 254);
  --gin-spacing-m: 1rem;
  --gin-border-l: 0.75rem;
  --gin-color-warning-light: #efcf64;
  --gin-bg-warning: #605328;
  --gin-color-danger-light: #f39b9d;
  --gin-bg-danger: #583333;
  --gin-bg-item-hover: var(--dark-theme-gray-hover);
}

:root [data-gin-accent=light_blue] {
  --gin-color-primary: var(--robin-egg);
  --gin-color-primary-rgb: 217, 241, 243;
  --gin-color-primary-active: var(--wool) !important;
  --gin-color-secondary: var(--mediterranean-blue);
  --gin-icon-color: var(--dark-gin-icon-color);
  --gin-bg-item-hover: var(--dark-theme-gray-hover);
  --gin-bg-header: var(--dark-theme-gray);
  --gin-color-text: var(--wool);
  --gin-color-text-light: var(--wool);
  --gin-color-primary-hover: var(--wool) !important;
  --gin-color-primary-light: var(--gin-bg-item-hover) !important;
  --gin-border-color-layer: var(--light-gray);

  --gin-bg-layer: var(--dark-theme-gray);
  --gin-bg-input: var(--darkest-gray) !important;
  --gin-dark-gray: var(--darkest-gray);
  --colorGinText: var(--darkest-gray);
  --gin-border-color-table-header: var(--darkest-gray);
  --gin-bg-layer3: var(--dark-theme-gray-hover);
  --gin-color-dark-text: var(--wool);
  --gin-color-title: var(--wool);
  --gin-color-button-text: var(--dark-theme-gray);
  --gin-color-button-text-hover: var(--dark-theme-gray-hover);
}


/* affect admin paths only */
:root .path-admin h1,
:root .path-admin h2 {
  font-weight: 600;
}

.gin--dark-mode .gin-secondary-toolbar,
.gin--dark-mode .gin-secondary-toolbar--frontend {
  background: rgba(var(--dark-theme-gray-rgb), 1);
}

/* // toolbar overrides */
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:hover, 
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:active {
  background-color: var(--darkest-gray);
}

/* // override toolbar drop-down arrow color */
.gin--dark-mode .toolbar-tray-horizontal ul li.menu-item--expanded ul li.menu-item--expanded::before {
  background-color: var(--wool);
}


/* // Layout-builder  */

/* Buttons */
.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actionsÂ .glb-button,
.form-actionsÂ .inline-block-create-button,
.form-actionsÂ .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link,
.meta-sidebar__trigger.is-active,
.meta-sidebar__close.is-active {
  background-color: var(--darkest-gray) !important;
}

.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.glb-button:not(:focus),
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actionsÂ .glb-button,
.form-actionsÂ .inline-block-create-button,
.form-actionsÂ .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link {
  border-radius: 2.5rem !important;
  border: 2px solid transparent !important;
}

.glb-button:hover,
.inline-block-create-button:hover,
.layout-builder__link--add:hover,
.glb-button:not(:focus):hover,
.inline-block-create-button:not(:focus):hover,
.layout-builder__link--add:not(:focus):hover,
.form-actions .glb-button:hover,
.form-actions .inline-block-create-button:hover,
.form-actions .layout-builder__link--add:hover,
.glb-action-link--icon-trash.glb-action-link:hover {
  border-color: var(--dark-theme-gray-hover) !important;
}

.glb-button:active, 
.inline-block-create-button:active, 
.layout-builder__link--add:active, 
.glb-button:focus, 
.inline-block-create-button:focus, 
.layout-builder__link--add:focus, 
.glb-button:not(:focus):active, 
.inline-block-create-button:not(:focus):active, 
.layout-builder__link--add:not(:focus):active, 
.glb-button:not(:focus):focus, 
.inline-block-create-button:not(:focus):focus, 
.layout-builder__link--add:not(:focus):focus, 
.form-actions .glb-button:active, 
.form-actions .inline-block-create-button:active, 
.form-actions .layout-builder__link--add:active, 
.form-actions .glb-button:focus, 
.form-actions .inline-block-create-button:focus, 
.form-actions .layout-builder__link--add:focus, 
.glb-action-link--icon-trash.glb-action-link:active, 
.glb-action-link--icon-trash.glb-action-link:focus {
  background-color: var(--robin-egg) !important;
}


.layout-builder__section:hover .layout-builder__link--add-section-to-library,
.layout-builder__section:hover .layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover) !important;
}

.layout-builder__section:hover .layout-builder__link--configure {
  color: var(--wool) !important;
  background-color: var(--dark-theme-gray) !important;
}

/* Sections on nodes */
.layout-builder .layout-builder__add-section {
  position: relative;
  background-color: hsl(180, 7%, 90%);
  padding: 1rem 2rem;
  margin: 2rem 1rem;
  max-width: calc(100% - 2rem);
}

.layout-builder__link--configure {
  color: var(--dark-theme-gray);
}

.layout-builder__link--add-section-to-library,
.layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover);
}

.layout-builder__section:not(.gin-lb--disable-section-focus)::after {
  border: 0.35rem solid  hsl(180, 7%, 75%) !important;
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.layout-builder__section:not(.gin-lb--disable-section-focus):hover::after {
  border: 0.35rem solid  hsl(180, 7%, 20%) !important;
}

.layout-builder__section {
  margin: 2rem 1rem;
}

.layout-builder__section .js-layout-builder-region {
  padding: 1rem;
}

/* Layout builder modal */
.ws-lb-link__label {
  color: var(--dark-theme-gray);
}

.gin--dark-mode .glb-form-element {
  background-color: var(--dark-theme-gray) !important;
}

.ui-dialog-titlebar {
  background: var(--darkest-gray);
}


/* chosen overrides */
.gin--dark-mode .chosen-container .chosen-results li.highlighted {
  background-color: var(--gin-color-primary);
  color: var(--darkest-gray);
}

.gin--dark-mode .chosen-container-single .chosen-single span {
  color: var(--wool);
}

.gin--dark-mode .chosen-search-input,
.gin--dark-mode .chosen-search-input::placeholder {
  color: var(--dark-theme-gray) !important;
}

/* search input placeholder opacity */
input[type="search"]::placeholder {
  opacity: 1;
}

